--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -8,7 +8,7 @@
     Your madlib:
 </h1>
     <p>
-    There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab. When {{ person }} went to pick it up, it burst into flames in a totally {{ adj}} way.
+    There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab. When {{ person }} went to pick it up, it burst into flames in a totally {{ adj1 }}, {{ adj2 }}, {{ adj3 }} way.
     </p>
 </body>
 </html>
