--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" href="./static/madlibs.css">
     <title>Goodbye</title>
 </head>
 <body>
