--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" href="./static/madlibs.css">
   <title>Hi There!</title>
 </head>
 <body>
