--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -1,15 +1,19 @@
-<!doctype html>
-<html>
-<head>
-    <title>A Compliment</title>
-</head>
-<body>
-    Hi {{ person }}! I think you're {{ compliment }}!
+
+    <!-- <link rel="stylesheet" href="./static/madlibs.css"> -->
+    {% extends 'base.html' %}
+    {% block title %}A Compliment{% endblock %}
+
+    {% block content %}
+    Hi {{ person }}! I think you're:
+    <ul>
+        {% for compliment in compliments %}
+        <li> {{ compliment }} </li>
+        {% endfor %}
+    </ul>
     <form action="/game">
         <label for="yesno">Would you like to play a game?</label>
         <input type="radio" name="yesno" value="yes">Yes
-        <input type="radio" name="yesno" value="no">No
-        <input type="submit">
+        <input type="radio" name="yesno" value="no">No<br>
+        <input class ="button" type ="submit">
     </form>
-</body>
-</html>
+    {% endblock %}
